--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
 
-    <title>TEST</title>
+    <title>Marvel Cinematic Universe</title>
 
     <link rel="stylesheet" href="css/style.css">
 </head>
